--- a/guides.html
+++ b/guides.html
@@ -40,14 +40,19 @@
                     <h3 class="font-semibold text-lg text-blue-700">The Bernoulli Distribution</h3>
                     <p class="text-gray-600 mt-1">Modeling a single binary event, like the state of a SNP.</p>
                 </a>
+                <!-- Add links to other guides as you create them -->
+                <!-- 
                 <a href="binomial-guide.html" class="block p-4 bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow">
                     <h3 class="font-semibold text-lg text-blue-700">The Binomial Distribution</h3>
                     <p class="text-gray-600 mt-1">Aggregating multiple Bernoulli trials to count successes.</p>
                 </a>
+                -->
             </div>
 
             <h2 class="text-2xl font-bold border-b pb-3 mb-6 mt-12">Distributions for Count Data</h2>
             <div class="space-y-4">
+                 <!-- Add links to other guides as you create them -->
+                <!--
                 <a href="poisson-guide.html" class="block p-4 bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow">
                     <h3 class="font-semibold text-lg text-blue-700">The Poisson Distribution</h3>
                     <p class="text-gray-600 mt-1">Modeling rates of rare events, like mutations or read counts.</p>
@@ -56,6 +61,7 @@
                     <h3 class="font-semibold text-lg text-blue-700">The Negative Binomial Distribution</h3>
                     <p class="text-gray-600 mt-1">The standard for overdispersed biological data like in RNA-seq.</p>
                 </a>
+                -->
             </div>
         </section>
     </main>
